# benzene-vanilla-cmake

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog.OldSvn  Makefile.am  NEWS  README  README.md  THANKS  TODO  configure.ac
regression/: Makefile.am  README  basics.tst  dfpn-claims.tst  dfpn-puzzle.tst  dfpn-solve-6x6.tst  dfpn-solve-7x7.tst  dfpn-solve-8x8-db.tst  dfpn-solve-8x8.tst  dfs-puzzle.tst  dfs-solve-6x6.tst  dfs-solve-6x7.tst  dfs-solve-7x7.tst  dfs-solve-7x8.tst  endgame.tst  gtpregress  htp.tst  ice.tst  midgame.tst  on14x14.tst  opening.tst  play.tst  puzzle.tst  run.sh  settings-dfpn.htp  settings-puzzle.htp  settings-vc.htp  solve-6x6.tst  solve-6x7.tst  solve-7x7.tst  solve-7x8.tst  vc.tst
share/: JingYangInfo.txt  Makefile.am  WolveCacheBook.txt  fillin-patterns.txt  hand-book-vs-six.txt  hand-book.txt  hex99-3.txt  ice-patterns.txt  induced-domination.txt  induced-equivalence.txt  induced-inferior.txt  misc-patterns.txt  mohex-global-pattern-gamma.txt  mohex-global-playout-pattern-gamma.txt  mohex-init-bad-patterns.txt  mohex-init-good-patterns.txt  mohex-local-pattern-gamma.txt  mohex-patterns.txt  mohex-prior-prune.txt  reversible-patterns.txt  swap-moves.txt  unique-probe.txt  vc-captured-set.txt  vc-patterns.txt
src/: CMakeLists.txt  Makefile.am  config.h
src/benzenetest/: BenzeneTestEngine.cpp  BenzeneTestEngine.hpp  BenzeneTestMain.cpp  BenzeneTestProgram.cpp  BenzeneTestProgram.hpp  Makefile.am
src/book/: Book.cpp  Book.hpp  BookBuilder.hpp  BookBuilderCommands.hpp  BookCheck.cpp  BookCheck.hpp  BookCommands.cpp  BookCommands.hpp  CMakeLists.txt  CacheBook.cpp  CacheBook.hpp  Makefile.am  SgBookBuilder.cpp  SgBookBuilder.h
src/commonengine/: BenzeneHtpEngine.cpp  BenzeneHtpEngine.hpp  CMakeLists.txt  CommonHtpEngine.cpp  CommonHtpEngine.hpp  CommonProgram.cpp  CommonProgram.hpp  Makefile.am  PlayAndSolve.cpp  PlayAndSolve.hpp  SwapCheck.cpp
src/gtpengine/: CMakeLists.txt  GtpEngine.cpp  GtpEngine.h
src/hex/: BenzenePlayer.cpp  BenzenePlayer.hpp  BitsetIterator.hpp  BitsetMap.hpp  BoardIterator.hpp  BoardUtil.cpp  BoardUtil.hpp  BoardUtils.cpp  BoardUtils.hpp  Book.cpp  Book.hpp  CMakeLists.txt  ConnectionBuilder.cpp  ConnectionBuilder.hpp  Connections.cpp  Connections.hpp  ConstBoard.cpp  ConstBoard.hpp  Decompositions.cpp  Decompositions.hpp  EndgameUtil.cpp  EndgameUtil.hpp  EndgameUtils.cpp  EndgameUtils.hpp  Game.cpp  Game.hpp  GraphUtil.cpp  GraphUtil.hpp  GraphUtils.cpp  GraphUtils.hpp  GroupBoard.cpp  GroupBoard.hpp  Groups.cpp  Groups.hpp  HandCodedPattern.cpp  HandCodedPattern.hpp  HashedPatternSet.cpp  HashedPatternSet.hpp  Hex.hpp  HexAbSearch.cpp  (+84 more)
src/jingyang/: CMakeLists.txt  JYEngine.cpp  JYEngine.hpp  JYMain.cpp  JYPattern.hpp  JYPlayer.cpp  JYPlayer.hpp  JYProgram.cpp  JYProgram.hpp  main.cxx
src/mohex/: CMakeLists.txt  HexUctKnowledge.cpp  HexUctKnowledge.hpp  HexUctPolicy.cpp  HexUctPolicy.hpp  HexUctSearch.cpp  HexUctSearch.hpp  HexUctState.cpp  HexUctState.hpp  HexUctUtil.cpp  HexUctUtil.hpp  Makefile.am  MoHexBoard.cpp  MoHexBoard.hpp  MoHexEngine.cpp  MoHexEngine.hpp  MoHexMain.cpp  MoHexPatterns.cpp  MoHexPatterns.hpp  MoHexPlayer.cpp  MoHexPlayer.hpp  MoHexPlayoutPolicy.cpp  MoHexPlayoutPolicy.hpp  MoHexPriorKnowledge.cpp  MoHexPriorKnowledge.hpp  MoHexProgram.cpp  MoHexProgram.hpp  MoHexSearch.cpp  MoHexSearch.hpp  MoHexThreadState.cpp  MoHexThreadState.hpp  MoHexUtil.cpp  MoHexUtil.hpp
src/player/: BenzeneHtpEngine.cpp  BenzeneHtpEngine.hpp  BenzenePlayer.cpp  BenzenePlayer.hpp  BookBuilder.hpp  BookBuilderCommands.hpp  BookCheck.cpp  BookCheck.hpp  BookCommands.cpp  BookCommands.hpp  EndgameCheck.cpp  EndgameCheck.hpp  HandBookCheck.cpp  HandBookCheck.hpp  HandicapPlayer.cpp  HandicapPlayer.hpp  LadderCheck.cpp  LadderCheck.hpp  Makefile.am  PerfectPlayer.cpp  PerfectPlayer.hpp  PlayAndSolve.cpp  PlayAndSolve.hpp  PlayerFactory.cpp  PlayerFactory.hpp  SolverCheck.cpp  SolverCheck.hpp  SwapCheck.cpp  SwapCheck.hpp  VulPreCheck.cpp  VulPreCheck.hpp
src/precomputation/: CMakeLists.txt  PatternPrecomputation.cpp
src/simpleplayers/: CMakeLists.txt  HandicapPlayer.cpp  HandicapPlayer.hpp  Makefile.am  PerfectPlayer.cpp  PerfectPlayer.hpp  VulPreCheck.cpp  VulPreCheck.hpp
src/six/: Makefile.am  SixHtpEngine.cpp  SixHtpEngine.hpp  batch.cpp  batch.h  carrier.cpp  carrier.h  circuit.cpp  circuit.h  connector.cpp  connector.h  group.cpp  group.h  hexboard.cpp  hexboard.h  hexfield.h  hexgame.cpp  hexgame.h  hexgamestate.cpp  hexgamestate.h  hexmark.cpp  hexmark.h  hexmatch.cpp  hexmatch.h  hexmove.cpp  hexmove.h  hexplayer.h  lssolve.cpp  lssolve.h  main.cpp  mat.h  misc.cpp  misc.h  poi.h  sixplayer.cpp  sixplayer.h  slicedtask.h  vec.h
src/smartgame/: CMakeLists.txt  SgBoardColor.h  SgBoardConst.cpp  SgEvaluatedMoves.cpp  SgGameReader.h  SgHash.h  SgHashTable.h  SgIncrementalStack.cpp  SgMpiSynchronizer.cpp  SgNode.h  SgPointIterator.h  SgProbCut.cpp  SgProcess.cpp  SgProp.cpp  SgProp.h  SgRandom.h  SgRect.h  SgSearch.cpp  SgSearch.h  SgSearchTracer.cpp  SgSearchValue.h  SgSortedArray.h  SgSortedMoves.h  SgStack.h  SgSystem.cpp  SgSystem.h  SgTime.cpp  SgTime.h  SgUctSearch.h  SgUctTree.cpp  SgUctValue.h  SgWrite.cpp
src/solver/: BenzeneSolver.hpp  CMakeLists.txt  DfpnCommands.cpp  DfpnCommands.hpp  DfpnSolver.cpp  DfpnSolver.hpp  DfsCommands.cpp  DfsCommands.hpp  DfsData.cpp  DfsData.hpp  DfsSolver.cpp  DfsSolver.hpp  Makefile.am  ProofUtil.cpp  ProofUtil.hpp  SolvedState.cpp  SolvedState.hpp  Solver.cpp  Solver.hpp  SolverCommands.cpp  SolverCommands.hpp  SolverDB.cpp  SolverDB.hpp  SolverDFPN.cpp  SolverDFPN.hpp
tools/: Makefile.am  settings-allOffSolve.htp  settings-optimal7x7Solve.htp
tournament/: HOWTO  Makefile.am  MoHexExperiment.clop  MoHexScript.py  asymmetric.py  checkSgfs.py  common.sh  difference.py  game.py  gameplayer.py  mohex-cg2010.htp  program.py  run-mohex-vs-mohex.sh  run-mohex-vs-six.sh  run-mohex-vs-wolve.sh  run-prog-vs-prog.sh  run-twogtp-by-hand.py  run-wolve-vs-six.sh  run-wolve-vs-wolve.sh  statistics.py  summary.py  tournament.py  tournyNotes  twogtp.py  wolve-cg2010.htp
(+584 files in other folders)
