EXTRA_DIST = \
basics.tst \
dfpn-puzzle.tst \
dfpn-solve-6x6.tst \
dfpn-solve-7x7.tst \
dfpn-solve-8x8.tst \
dfpn-solve-8x8-db.tst \
dfs-puzzle.tst \
dfs-solve-6x6.tst \
dfs-solve-6x7.tst \
dfs-solve-7x7.tst \
dfs-solve-7x8.tst \
endgame.tst \
gtpregress \
gtpregress.jar \
htp.tst \
ice.tst \
midgame.tst \
on14x14.tst \
opening.tst \
play.tst \
README \
settings-puzzle.htp \
vc.tst \
sgf/endgame/close-endgame01.sgf \
sgf/endgame/close-endgame02.sgf \
sgf/endgame/close-endgame03.sgf \
sgf/endgame/close-endgame04.sgf \
sgf/endgame/close-endgame05.sgf \
sgf/endgame/close-endgame06.sgf \
sgf/endgame/close-endgame07.sgf \
sgf/endgame/close-endgame08.sgf \
sgf/endgame/close-endgame09.sgf \
sgf/endgame/close-endgame10.sgf \
sgf/endgame/close-endgame11.sgf \
sgf/endgame/close-endgame12.sgf \
sgf/endgame/close-endgame13.sgf \
sgf/endgame/easy-endgame01.sgf \
sgf/endgame/easy-endgame02.sgf \
sgf/endgame/easy-endgame03.sgf \
sgf/endgame/easy-endgame04.sgf \
sgf/endgame/random-endgame01.sgf \
sgf/endgame/random-endgame02.sgf \
sgf/endgame/random-endgame03.sgf \
sgf/endgame/random-endgame04.sgf \
sgf/endgame/random-endgame05a.sgf \
sgf/endgame/random-endgame05b.sgf \
sgf/endgame/random-endgame06a.sgf \
sgf/endgame/random-endgame06b.sgf \
sgf/endgame/random-endgame07.sgf \
sgf/endgame/random-endgame08.sgf \
sgf/endgame/random-endgame09.sgf \
sgf/endgame/random-endgame10.sgf \
sgf/endgame/random-endgame11.sgf \
sgf/endgame/random-endgame12.sgf \
sgf/endgame/random-endgame13.sgf \
sgf/endgame/random-endgame14a.sgf \
sgf/endgame/random-endgame14b.sgf \
sgf/endgame/random-endgame15.sgf \
sgf/endgame/random-endgame16.sgf \
sgf/endgame/simple-endgame01.sgf \
sgf/endgame/simple-endgame02.sgf \
sgf/endgame/simple-endgame03.sgf \
sgf/endgame/simple-endgame04.sgf \
sgf/games/olympiad/00/00.1.QH.sgf \
sgf/games/olympiad/00/00.2.HQ.sgf \
sgf/games/olympiad/03/03.1.SM.sgf \
sgf/games/olympiad/03/03.2.MS.sgf \
sgf/games/olympiad/03/03.3.SM.sgf \
sgf/games/olympiad/03/03.4.MS.sgf \
sgf/games/olympiad/03/03.5.SM.sgf \
sgf/games/olympiad/03/03.6.MS.sgf \
sgf/games/olympiad/03/03.7.SM.sgf \
sgf/games/olympiad/03/03.8.MS.sgf \
sgf/games/olympiad/04/04.1.SM.sgf \
sgf/games/olympiad/04/04.2.MS.sgf \
sgf/games/olympiad/04/04.3.SM.sgf \
sgf/games/olympiad/04/04.4.MS.sgf \
sgf/games/olympiad/04/04.5.SM.sgf \
sgf/games/olympiad/04/04.6.MS.sgf \
sgf/games/olympiad/06/gm01.whk.sgf \
sgf/games/olympiad/06/gm02.hkw.sgf \
sgf/games/olympiad/06/gm03.ws.sgf \
sgf/games/olympiad/06/gm04.sw.sgf \
sgf/games/olympiad/06/gm05.hks.six \
sgf/games/olympiad/06/gm06.shk.six \
sgf/games/olympiad/06/gm07.hks.six \
sgf/games/olympiad/06/gm08.shk.six \
sgf/games/olympiad/06/gm09.ws.sgf \
sgf/games/olympiad/06/gm10.sw.sgf \
sgf/games/olympiad/06/gm11.hkw.sgf \
sgf/games/olympiad/06/gm12.whk.sgf \
sgf/games/olympiad/06/README \
sgf/games/olympiad/08/mohex-six-2.sgf \
sgf/games/olympiad/08/mohex-six-4.sgf \
sgf/games/olympiad/08/mohex-wolve-1.sgf \
sgf/games/olympiad/08/mohex-wolve-3.sgf \
sgf/games/olympiad/08/mohex-yopt-1.sgf \
sgf/games/olympiad/08/mohex-yopt-3.sgf \
sgf/games/olympiad/08/six-mohex-1.sgf \
sgf/games/olympiad/08/six-mohex-3.sgf \
sgf/games/olympiad/08/six-wolve-2.sgf \
sgf/games/olympiad/08/six-wolve-4.sgf \
sgf/games/olympiad/08/six-yopt-1.sgf \
sgf/games/olympiad/08/six-yopt-4.sgf \
sgf/games/olympiad/08/wolve-mohex-2.sgf \
sgf/games/olympiad/08/wolve-mohex-4.sgf \
sgf/games/olympiad/08/wolve-six-1-redone.sgf \
sgf/games/olympiad/08/wolve-six-1.sgf \
sgf/games/olympiad/08/wolve-six-3.sgf \
sgf/games/olympiad/08/wolve-yopt-1.sgf \
sgf/games/olympiad/08/wolve-yopt-3.sgf \
sgf/games/olympiad/08/yopt-mohex-2.sgf \
sgf/games/olympiad/08/yopt-mohex-4.sgf \
sgf/games/olympiad/08/yopt-six-2.sgf \
sgf/games/olympiad/08/yopt-six-3.sgf \
sgf/games/olympiad/08/yopt-wolve-2.sgf \
sgf/games/olympiad/08/yopt-wolve-4.sgf \
sgf/games/olympiad/09/wy1.sgf \
sgf/games/olympiad/09/my1.sgf \
sgf/games/olympiad/09/yw1.sgf \
sgf/games/olympiad/09/sy1.sgf \
sgf/games/olympiad/09/ym1.sgf \
sgf/games/olympiad/09/ys1.sgf \
sgf/games/olympiad/09/ms1.sgf \
sgf/games/olympiad/09/sm1.sgf \
sgf/games/olympiad/09/wm1.sgf \
sgf/games/olympiad/09/ws1.sgf \
sgf/games/olympiad/09/sw1.sgf \
sgf/games/olympiad/09/mw1.sgf \
sgf/inferior/adj-to-both-edges.sgf \
sgf/inferior/all-nbs-adj-to-one-edge.sgf \
sgf/inferior/basic2.sgf \
sgf/inferior/basic.sgf \
sgf/inferior/basic-variation1.sgf \
sgf/inferior/basic-variation2.sgf \
sgf/inferior/centre-dead-region1.sgf \
sgf/inferior/centre-dead-region2.sgf \
sgf/inferior/centre-dead-region3.sgf \
sgf/inferior/chain-of-captured.sgf \
sgf/inferior/clique-thru-groups.sgf \
sgf/inferior/complex-dead.sgf \
sgf/inferior/complex-presimplicial-pair.sgf \
sgf/inferior/dead-not-ring01.sgf \
sgf/inferior/dead-not-ring02.sgf \
sgf/inferior/dead-not-ring03.sgf \
sgf/inferior/dead-not-ring04.sgf \
sgf/inferior/dead-not-ring05.sgf \
sgf/inferior/dead-not-ring06.sgf \
sgf/inferior/dead-region-via-one-cut.sgf \
sgf/inferior/dead-region-via-two-clique.sgf \
sgf/inferior/dead-thru-edge.sgf \
sgf/inferior/dead-thru-group.sgf \
sgf/inferior/dead-via-isolated-VC1.sgf \
sgf/inferior/dead-via-isolated-VC2.sgf \
sgf/inferior/dead-via-isolated-VC3.sgf \
sgf/inferior/dead-via-isolated-VC4.sgf \
sgf/inferior/decomp-with-6-groups.sgf \
sgf/inferior/double-decomposition1.sgf \
sgf/inferior/edge-sealed-dead-region1.sgf \
sgf/inferior/edge-sealed-dead-region2.sgf \
sgf/inferior/edge-sealed-dead-region3.sgf \
sgf/inferior/game-decided-via-captured.sgf \
sgf/inferior/global-captured-and-dead.sgf \
sgf/inferior/iterate-vulnerable.sgf \
sgf/inferior/large-dead-region2.sgf \
sgf/inferior/large-dead-region.sgf \
sgf/inferior/local-pattern-fillin1.sgf \
sgf/inferior/massive-captured-missing.sgf \
sgf/inferior/opp-backup1.sgf \
sgf/inferior/probes-vulnerable.sgf \
sgf/inferior/strange-path.sgf \
sgf/inferior/thorough-thru-edge.sgf \
sgf/inferior/use-captain-not-cell.sgf \
sgf/inferior/vulnerable-dominated-cycle.sgf \
sgf/inferior/vulnerable-via-superset-group.sgf \
sgf/largeBoards/13x13-game01.sgf \
sgf/largeBoards/13x13-game02.sgf \
sgf/largeBoards/14x14-berge-3.sgf \
sgf/largeBoards/14x14-berge-4.sgf \
sgf/largeBoards/14x14-berge-5.sgf \
sgf/largeBoards/14x14-row6Template.sgf \
sgf/midgame/make-connection-with-max-influence01.sgf \
sgf/midgame/make-connection-with-max-influence02.sgf \
sgf/midgame/make-connection-with-max-influence03.sgf \
sgf/opening/5x5a3.sgf \
sgf/opening/6x6a1.sgf \
sgf/opening/6x6a2.sgf \
sgf/opening/6x6e1.sgf \
sgf/opening/7x7a1.sgf \
sgf/opening/7x7a2.sgf \
sgf/opening/7x7a3.sgf \
sgf/opening/7x7a5.sgf \
sgf/opening/7x7b1.sgf \
sgf/opening/7x7b2.sgf \
sgf/opening/7x7c1.sgf \
sgf/opening/7x7d1.sgf \
sgf/opening/7x7d2.sgf \
sgf/opening/7x7e1.sgf \
sgf/opening/7x7f1.sgf \
sgf/opening/7x7.sgf \
sgf/puzzles/10x10-LG-01.sgf \
sgf/puzzles/10x10-LG-01sol.sgf \
sgf/puzzles/11x11-boll-03.sgf \
sgf/puzzles/11x11-boll-04.sgf \
sgf/puzzles/11x11-boll-05.sgf \
sgf/puzzles/11x11-browne-01.sgf \
sgf/puzzles/11x11-browne-02.sgf \
sgf/puzzles/11x11-browne-03.sgf \
sgf/puzzles/11x11-hein-01.sgf \
sgf/puzzles/11x11-henderson-03.sgf \
sgf/puzzles/11x11-henderson-63.sgf \
sgf/puzzles/11x11-henderson-71.sgf \
sgf/puzzles/11x11-henderson-83.sgf \
sgf/puzzles/11x11-henderson-84.sgf \
sgf/puzzles/11x11-henderson-85.sgf \
sgf/puzzles/11x11-henderson-86.sgf \
sgf/puzzles/11x11-henderson-87.sgf \
sgf/puzzles/11x11-henderson-103.sgf \
sgf/puzzles/11x11-henderson-106.sgf \
sgf/puzzles/3x3-hein-02.sgf \
sgf/puzzles/4x4-hein-04.sgf \
sgf/puzzles/4x4-hein-05.sgf \
sgf/puzzles/5x5-berge-1.sgf \
sgf/puzzles/5x5-hein-06.sgf \
sgf/puzzles/5x5-henderson-11.sgf \
sgf/puzzles/5x5-henderson-12.sgf \
sgf/puzzles/6x6-hayward-01.sgf \
sgf/puzzles/6x6-hein-03.sgf \
sgf/puzzles/6x6-hein-07.sgf \
sgf/puzzles/6x6-henderson-02.sgf \
sgf/puzzles/6x6-henderson-04.sgf \
sgf/puzzles/6x6-henderson-09.sgf \
sgf/puzzles/6x6-henderson-10.sgf \
sgf/puzzles/6x6-henderson-13.sgf \
sgf/puzzles/6x6-henderson-14.sgf \
sgf/puzzles/6x6-henderson-15.sgf \
sgf/puzzles/6x6-henderson-16.sgf \
sgf/puzzles/6x6-henderson-17.sgf \
sgf/puzzles/6x6-henderson-18.sgf \
sgf/puzzles/6x6-henderson-19.sgf \
sgf/puzzles/6x6-henderson-20.sgf \
sgf/puzzles/6x6-henderson-21.sgf \
sgf/puzzles/6x6-henderson-22.sgf \
sgf/puzzles/6x6-henderson-82.sgf \
sgf/puzzles/7x7-enderton-01.sgf \
sgf/puzzles/7x7-enderton-02.sgf \
sgf/puzzles/7x7-enderton-03.sgf \
sgf/puzzles/7x7-enderton-04.sgf \
sgf/puzzles/7x7-henderson-05.sgf \
sgf/puzzles/7x7-henderson-06.sgf \
sgf/puzzles/7x7-henderson-07.sgf \
sgf/puzzles/7x7-henderson-08.sgf \
sgf/puzzles/7x7-henderson-23.sgf \
sgf/puzzles/7x7-henderson-24.sgf \
sgf/puzzles/7x7-henderson-25.sgf \
sgf/puzzles/7x7-henderson-26.sgf \
sgf/puzzles/7x7-henderson-27.sgf \
sgf/puzzles/7x7-henderson-28.sgf \
sgf/puzzles/7x7-henderson-29.sgf \
sgf/puzzles/7x7-henderson-30.sgf \
sgf/puzzles/7x7-henderson-31.sgf \
sgf/puzzles/7x7-henderson-32.sgf \
sgf/puzzles/7x7-henderson-33.sgf \
sgf/puzzles/7x7-henderson-34.sgf \
sgf/puzzles/7x7-henderson-35.sgf \
sgf/puzzles/7x7-henderson-36.sgf \
sgf/puzzles/7x7-henderson-37.sgf \
sgf/puzzles/7x7-henderson-38.sgf \
sgf/puzzles/7x7-henderson-39.sgf \
sgf/puzzles/7x7-henderson-40.sgf \
sgf/puzzles/7x7-henderson-41.sgf \
sgf/puzzles/7x7-henderson-42.sgf \
sgf/puzzles/7x7-henderson-43.sgf \
sgf/puzzles/7x7-henderson-44.sgf \
sgf/puzzles/7x7-henderson-45.sgf \
sgf/puzzles/7x7-henderson-46.sgf \
sgf/puzzles/7x7-henderson-47.sgf \
sgf/puzzles/7x7-henderson-48.sgf \
sgf/puzzles/7x7-henderson-49.sgf \
sgf/puzzles/7x7-henderson-50.sgf \
sgf/puzzles/7x7-henderson-51.sgf \
sgf/puzzles/7x7-henderson-52.sgf \
sgf/puzzles/7x7-henderson-53.sgf \
sgf/puzzles/7x7-henderson-54.sgf \
sgf/puzzles/7x7-henderson-55.sgf \
sgf/puzzles/7x7-henderson-57.sgf \
sgf/puzzles/7x7-henderson-58.sgf \
sgf/puzzles/7x7-henderson-59.sgf \
sgf/puzzles/7x7-henderson-60.sgf \
sgf/puzzles/7x7-henderson-61.sgf \
sgf/puzzles/7x7-henderson-62.sgf \
sgf/puzzles/7x7-henderson-74.sgf \
sgf/puzzles/7x7-henderson-75.sgf \
sgf/puzzles/7x7-henderson-76.sgf \
sgf/puzzles/7x7-henderson-77.sgf \
sgf/puzzles/7x7-henderson-78.sgf \
sgf/puzzles/7x7-henderson-79.sgf \
sgf/puzzles/7x7-henderson-80.sgf \
sgf/puzzles/7x7-henderson-81.sgf \
sgf/puzzles/7x7-LG-01.sgf \
sgf/puzzles/8x8-henderson-56.sgf \
sgf/puzzles/8x8-henderson-66.sgf \
sgf/puzzles/8x8-henderson-88.sgf \
sgf/puzzles/8x8-henderson-89.sgf \
sgf/puzzles/8x8-henderson-90.sgf \
sgf/puzzles/8x8-henderson-91.sgf \
sgf/puzzles/8x8-henderson-92.sgf \
sgf/puzzles/8x8-henderson-93.sgf \
sgf/puzzles/8x8-henderson-94.sgf \
sgf/puzzles/8x8-henderson-95.sgf \
sgf/puzzles/8x8-henderson-96.sgf \
sgf/puzzles/8x8-henderson-97.sgf \
sgf/puzzles/8x8-henderson-98.sgf \
sgf/puzzles/8x8-henderson-99.sgf \
sgf/puzzles/9x9-boll-01.sgf \
sgf/puzzles/9x9-boll-02.sgf \
sgf/puzzles/9x9-henderson-01.sgf \
sgf/puzzles/9x9-henderson-64.sgf \
sgf/puzzles/9x9-henderson-65.sgf \
sgf/puzzles/9x9-henderson-67.sgf \
sgf/puzzles/9x9-henderson-68.sgf \
sgf/puzzles/9x9-henderson-69.sgf \
sgf/puzzles/9x9-henderson-70.sgf \
sgf/puzzles/9x9-henderson-72.sgf \
sgf/puzzles/9x9-henderson-73.sgf \
sgf/puzzles/9x9-henderson-100.sgf \
sgf/puzzles/9x9-henderson-101.sgf \
sgf/puzzles/9x9-henderson-102.sgf \
sgf/puzzles/9x9-henderson-104.sgf \
sgf/puzzles/9x9-henderson-105.sgf \
sgf/vc/b10-is-key2.sgf \
sgf/vc/b10-is-key.sgf \
sgf/vc/black-has-winning-SC-with-f7-key.sgf \
sgf/vc/black-i4-does-not-block.sgf \
sgf/vc/c4-has-VC-to-North.sgf \
sgf/vc/can-win-with-e7.sgf \
sgf/vc/check-109853-to-edge.sgf \
sgf/vc/check-432-to-edge.sgf \
sgf/vc/check-7652-to-edge.sgf \
sgf/vc/DK-29-10-9-6-3.sgf \
sgf/vc/DK-3343.sgf \
sgf/vc/DK-65-12-3.sgf \
sgf/vc/DK-654321.sgf \
sgf/vc/DK-65432b.sgf \
sgf/vc/DK-65432.sgf \
sgf/vc/DK-6543.sgf \
sgf/vc/DK-655432.sgf \
sgf/vc/DK-76532.sgf \
sgf/vc/DK-76542.sgf \
sgf/vc/DK-765432b.sgf \
sgf/vc/DK-765432.sgf \
sgf/vc/DK-76543.sgf \
sgf/vc/DK-76642.sgf \
sgf/vc/DK-766542.sgf \
sgf/vc/DK-87631.sgf \
sgf/vc/DK-88763.sgf \
sgf/vc/DK-98753.sgf \
sgf/vc/e3-has-VC-to-west-edge.sgf \
sgf/vc/game-over-but-sees-4-mustplay.sgf \
sgf/vc/j2-is-key.sgf \
sgf/vc/ladder-VC-to-north.sgf \
sgf/vc/non-Anshelevich-edge-connection1.sgf \
sgf/vc/non-Anshelevich-edge-connection2.sgf \
sgf/vc/non-Anshelevich-edge-connection3.sgf \
sgf/vc/obvious-ladder.sgf \
sgf/vc/PH-6443.sgf \
sgf/vc/small-non-Ansh-SC.sgf 
