# data files to be installed in ${prefix}/share/benzene/ directory
dist_pkgdata_DATA = \
ice-patterns.txt \
induced-domination.txt \
induced-equivalence.txt \
induced-inferior.txt \
mohex-init-bad-patterns.txt \
mohex-init-good-patterns.txt \
mohex-patterns.txt \
swap-moves.txt \
unique-probe.txt \
vc-captured-set.txt \
vc-patterns.txt \
wolve-cache-book.txt
