add_subdirectory( book/ )
add_subdirectory( hex/ )
add_subdirectory( util/ )
add_subdirectory( solver/ )
add_subdirectory( commonengine/ )
add_subdirectory( simpleplayers/ )
add_subdirectory( wolve/ )
add_subdirectory( mohex/ )
add_subdirectory( gtpengine/ )
add_subdirectory( smartgame/ )
add_subdirectory( jingyang/ )
