EXTRA_DIST = \
settings-allOffSolveBUTdec.htp \
settings-allOffSolveBUTice.htp \
settings-allOffSolveBUTipd.htp \
settings-allOffSolveBUTmmo.htp \
settings-allOffSolveBUTpc.htp \
settings-allOffSolveBUTpsr.htp \
settings-allOffSolveBUTtd.htp \
settings-allOffSolveBUTtt.htp \
settings-allOffSolve.htp \
settings-allOnSolveBUTdec.htp \
settings-allOnSolveBUTice.htp \
settings-allOnSolveBUTipd.htp \
settings-allOnSolveBUTmmo.htp \
settings-allOnSolveBUTpc.htp \
settings-allOnSolveBUTpsr.htp \
settings-allOnSolveBUTtd.htp \
settings-allOnSolveBUTtt.htp \
settings-allOnSolve.htp \
settings-optimal7x7Solve.htp \
cronjob/benzene-daily.sh \
solver/solve.py \
solver/6x6.openings \
solver/7x7.openings.linear \
solver/7x7.openings.spiral \
solver/8x8.openings \
solver/8x8.openings.easy
