EXTRA_DIST = \
HOWTO \
asymmetric.py \
checkSgfs.py \
difference.py \
game.py \
gameplayer.py \
program.py \
statistics.py \
summary.py \
tournyNotes \
twogtp.py \
openings/11x11-a2-2ply \
openings/11x11-all-1ply \
openings/11x11-book-1ply \
openings/11x11-random-10ply \
openings/11x11-swap-1ply \
openings/7x7-all-1ply \
openings/9x9-all-1ply
