EXTRA_DIST = \
HOWTO \
asymmetric.py \
common.sh \
difference.py \
game.py \
gameplayer.py \
program.py \
run-mohex-vs-mohex.sh \
run-mohex-vs-six.sh \
run-prog-vs-prog.sh \
run-wolve-vs-six.sh \
run-wolve-vs-wolve.sh \
statistics.py \
summary.py \
tournament.py \
twogtp.py \
openings/11x11-a2-2ply \
openings/11x11-all-1ply \
openings/11x11-book-1ply \
openings/11x11-random-10ply \
openings/11x11-swap-1ply \
openings/10x10-all-1ply \
openings/7x7-all-1ply \
openings/8x8-all-1ply \
openings/9x9-all-1ply
